--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "@theme-ui/preset-deep": "^0.12.0",
-    "@theme-ui/prism": "^0.12.1",
-    "gatsby": "^3.0.0",
+    "@reach/skip-nav": "^0.17.0",
+    "@theme-ui/preset-deep": "^0.15.1",
+    "@theme-ui/prism": "^0.14.7",
+    "gatsby": "^4.24.2",
     "gatsby-plugin-compile-es6-packages": "^2.1.1",
-    "gatsby-plugin-image": "^1.14.2",
-    "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-remark-images": "^5.10.0",
-    "gatsby-theme-blog": "^3.0.0",
-    "gatsby-transformer-json": "^2.11.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "prismjs": "^1.25.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "theme-ui": "0.11.2"
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-theme-ui": "^0.14.7",
+    "gatsby-remark-images": "^6.24.0",
+    "gatsby-theme-blog": "^4.0.0",
+    "gatsby-transformer-json": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "prismjs": "^1.29.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "theme-ui": "^0.14.7"
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
